fix for too big margin at bottom of main area

--- a/mara_app/static/mara.css
+++ b/mara_app/static/mara.css
@@ -206,7 +206,7 @@ body > #mara-main {
     transition: left .3s;
     top: 60px;
     width: 100%;
-    padding: 15px;
+    padding-top: 15px;
     padding-left: 69px; /* nav collapsed + 15 */
 }
 
